Source/WebKit2/Platform/CoreIPC/Connection.h
@@ -90,6 +90,7 @@ public:
     public:
         virtual void didClose(Connection*) = 0;
         virtual void didReceiveInvalidMessage(Connection*, MessageID) = 0;
+        virtual void didFailToSendSyncMessage(Connection*) { }
     };
 
 #if PLATFORM(MAC)
